--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=movies
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+spring.datasource.username=FULLSTACK
+spring.datasource.password=11992288Hcde-
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.jpa.hibernate.ddl-auto=none
